--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "jsx-dev-runtime.d.ts"
   ],
   "authors": [
-    "Vitali Zaidman <vzaidman@gmail.com> (https://github.com/vzaidman)"
+    "Vani"
   ],
   "license": "MIT",
-  "repository": "https://github.com/welldone-software/why-did-you-render",
+  "repository": "https://github.com/markovicivan/wdyr",
   "keywords": [
     "react",
     "component",
