--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "Vani"
   ],
   "license": "MIT",
-  "repository": "https://github.com/markovicivan/wdyr",
+  "repository": "https://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:x-oauth-basic@github.com/markovicivan/wdyr",
   "keywords": [
     "react",
     "component",
